mutants.out.old/log/crates__umbra-core__src__vector.rs_line_47_col_9.log

*** crates/umbra-core/src/vector.rs:47:9: replace Vector3::scale -> Vector3 with Default::default()

*** mutation diff:
--- crates/umbra-core/src/vector.rs
+++ replace Vector3::scale -> Vector3 with Default::default()
@@ -39,21 +39,17 @@
 
     /// ノルム（ユークリッド長）。
     pub fn norm(self) -> f64 {
         self.dot(self).sqrt()
     }
 
     /// スカラ倍。
     pub fn scale(self, s: f64) -> Vector3 {
-        Vector3 {
-            x: self.x * s,
-            y: self.y * s,
-            z: self.z * s,
-        }
+        Default::default() /* ~ changed by cargo-mutants ~ */
     }
 }
 
 impl core::ops::Add for Vector3 {
     type Output = Vector3;
     fn add(self, o: Vector3) -> Vector3 {
         Vector3::new(self.x + o.x, self.y + o.y, self.z + o.z)
     }


*** /usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=umbra-core@0.0.0
[1m[92m       Fresh[0m unicode-ident v1.0.24
[1m[92m       Fresh[0m proc-macro2 v1.0.106
[1m[92m       Fresh[0m quote v1.0.45
[1m[92m       Fresh[0m syn v2.0.117
[1m[92m       Fresh[0m thiserror-impl v2.0.18
[1m[92m       Fresh[0m thiserror v2.0.18
[1m[92m       Dirty[0m umbra-core v0.0.0 (/tmp/cargo-mutants-work-mG65dY.tmp/crates/umbra-core): the file `crates/umbra-core/src/vector.rs` has changed (1781452536.048299424s, 1s after last build at 1781452535.660274858s)
[1m[92m   Compiling[0m umbra-core v0.0.0 (/tmp/cargo-mutants-work-mG65dY.tmp/crates/umbra-core)
[1m[92m     Running[0m `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=5dee908a95c6f918 -C extra-filename=-023fb58edce5bb87 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rlib`
[1m[92m     Running[0m `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a80e8303726d4ac2 -C extra-filename=-2d760b0efc748f93 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rmeta`
[1m[91merror[E0277][0m[1m: the trait bound `Vector3: Default` is not satisfied[0m
  [1m[94m--> [0mcrates/umbra-core/src/vector.rs:47:9
   [1m[94m|[0m
[1m[94m47[0m [1m[94m|[0m         Default::default() /* ~ changed by cargo-mutants ~ */
   [1m[94m|[0m         [1m[91m^^^^^^^^^^^^^^^^^^[0m [1m[91mthe trait `Default` is not implemented for `Vector3`[0m
   [1m[94m|[0m
[1m[96mhelp[0m: consider annotating `Vector3` with `#[derive(Default)]`
   [1m[94m|[0m
[1m[94m 7[0m [92m+ #[derive(Default)][0m
[1m[94m 8[0m [1m[94m|[0m pub struct Vector3 {
   [1m[94m|[0m

[1mFor more information about this error, try `rustc --explain E0277`.[0m
[1m[91merror[0m: could not compile `umbra-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a80e8303726d4ac2 -C extra-filename=-2d760b0efc748f93 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rmeta` (exit status: 1)
[1m[33mwarning[0m: build failed, waiting for other jobs to finish...
[1m[91merror[E0277][0m[1m: the trait bound `vector::Vector3: Default` is not satisfied[0m
  [1m[94m--> [0mcrates/umbra-core/src/vector.rs:47:9
   [1m[94m|[0m
[1m[94m47[0m [1m[94m|[0m         Default::default() /* ~ changed by cargo-mutants ~ */
   [1m[94m|[0m         [1m[91m^^^^^^^^^^^^^^^^^^[0m [1m[91mthe trait `Default` is not implemented for `vector::Vector3`[0m
   [1m[94m|[0m
[1m[96mhelp[0m: consider annotating `vector::Vector3` with `#[derive(Default)]`
   [1m[94m|[0m
[1m[94m 7[0m [92m+ #[derive(Default)][0m
[1m[94m 8[0m [1m[94m|[0m pub struct Vector3 {
   [1m[94m|[0m

[1m[91merror[0m: could not compile `umbra-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/usr/local/rustup/toolchains/1.96.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name umbra_core --edition=2021 crates/umbra-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --forbid=unsafe_code --warn=missing_debug_implementations '--warn=clippy::cast_precision_loss' '--warn=clippy::cast_possible_truncation' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=5dee908a95c6f918 -C extra-filename=-023fb58edce5bb87 --out-dir /tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps --extern thiserror=/tmp/cargo-mutants-work-mG65dY.tmp/target/debug/deps/libthiserror-85db076080d1230b.rlib` (exit status: 1)

*** result: Failure(101)
